implement network policy manager
