# docs/swagger.json
@@ -386,6 +386,29 @@
                 }
             }
         },
+        "/v1/policies/revert": {
+            "post": {
+                "description": "revert policy",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Policy"
+                ],
+                "summary": "revert policy",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ApiResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/policies/{policyId}": {
             "delete": {
                 "description": "remove an existing policy",
