# internal/api/http/router.go
@@ -71,6 +71,7 @@ func NewApiRouter() *chi.Mux {
 	r.Get("/v1/policies/{chain}", policyHandler.GetPolicyList)      //get policy
 	r.Post("/v1/policies", policyHandler.AddPolicy)                 // add policy
 	r.Post("/v1/policies/commit", policyHandler.CommitPolicy)       // commit policy
+	r.Post("/v1/policies/revert", policyHandler.RevertPolicy)       // revert policy
 	r.Delete("/v1/policies/{policyId}", policyHandler.RemovePolicy) // remove policy
 
 	return r
